# llama_docker

./: .gitignore  .gitmodules  BUILD-DOCKER-IMAGE.sh  README.md  RUN-DOCKER-CONTAINER.sh  convert.sh  download.sh  pyproject.toml  run.py
docker/: Dockerfile  Dockerfile.hsr  Dockerfile.llama
