[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gguf>=0.1.0",
    "numpy~=1.24.4",
    "protobuf>=4.21.0,<5.0.0",
    "sentencepiece~=0.2.0",
    "torch~=2.2.1",
    "transformers>=4.45.1,<5.0.0",
]
